File type MD to MDX

--- a/src/content/ipfs/ipfs-as-storage.mdx
+++ b/src/content/ipfs/ipfs-as-storage.mdx
@@ -6,7 +6,16 @@ image: {
   alt: 'XXX'
 }
 date: '10/23/2023'
-tags: ['IPFS', 'Decentralization']
+tags: ['ipfs', 'decentralization']
+draft: true
 ---
 
+import MainLayout from '../../layouts/MainLayout.astro';
+
 IPFS as storage...
+
+<MainLayout title="Blog | Kevin Fiorentino">
+  {frontmatter.title}
+</MainLayout>
+
+
