--- a/src/content/javascript/javascript-basic.mdx
+++ b/src/content/javascript/javascript-basic.mdx
@@ -1,19 +1,12 @@
 ---
-title: 'Solana basic'
-desc: 'Solana is ...'
+title: 'Javascript basic'
+desc: 'Javascript is ...'
 image: {
   url: 'https://images.unsplash.com/photo-1609557927087-f9cf8e88de18?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80',
   alt: 'XXX'
 }
-date: '10/23/2023'
-tags: ['Blockchain', 'Solana']
+date: '10/10/2022'
+tags: ['javascript']
 ---
 
-# SOLANA !!!!!!!!!
-
-Solana basic...
-
-```javascript
-const asd = 'hola!';
-console.log(asd);
-```
+Javascript basic...
