--- a/src/content/ipfs/ipfs-as-storage.mdx
+++ b/src/content/ipfs/ipfs-as-storage.mdx
@@ -10,7 +10,7 @@ tags: ['ipfs', 'decentralization']
 draft: true
 ---
 
-import MainLayout from '../../layouts/MainLayout.astro';
+import MainLayout from '@layouts/MainLayout.astro';
 
 IPFS as storage...
 
