--- a/src/content/ipfs/en/ipfs-as-storage.mdx
+++ b/src/content/ipfs/en/ipfs-as-storage.mdx
@@ -12,7 +12,7 @@ draft: true
 
 import MainLayout from '@layouts/MainLayout.astro';
 
-IPFS as storage...
+ENGLISH IPFS as storage...
 
 <MainLayout title="Blog | Kevin Fiorentino">
   {frontmatter.title}
