--- a/src/content/solana/en/solana-basic.mdx
+++ b/src/content/solana/en/solana-basic.mdx
@@ -11,7 +11,7 @@ tags: ['blockchain', 'solana']
 
 # SOLANA !!!!!!!!!
 
-Solana basic...
+ENGLISH Solana basic...
 
 ```javascript
 const asd = 'hola!';
