--- a/src/content/ipfs/es/ipfs-as-storage.mdx
+++ b/src/content/ipfs/es/ipfs-as-storage.mdx
@@ -1,12 +1,21 @@
 ---
-title: 'What is IPFS'
-desc: 'IPFS is ...'
+title: 'IPFS as storage'
+desc: 'Save files on IPFS is ...'
 image: {
   url: 'https://images.unsplash.com/photo-1609557927087-f9cf8e88de18?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80',
   alt: 'XXX'
 }
 date: '10/23/2023'
 tags: ['ipfs', 'decentralization']
+draft: true
 ---
 
-What is IPFS...
+import MainLayout from '@layouts/MainLayout.astro';
+
+ESPAÑOL IPFS as storage...
+
+<MainLayout title="Blog | Kevin Fiorentino">
+  {frontmatter.title}
+</MainLayout>
+
+
