--- a/src/content/solana/es/how-solana-work.mdx
+++ b/src/content/solana/es/how-solana-work.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How Solana work'
+title: 'ES How Solana work'
 desc: 'Solana works like ...'
 image: {
   url: 'https://images.unsplash.com/photo-1609557927087-f9cf8e88de18?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80',
