--- a/src/content/javascript/es/javascript-basic.mdx
+++ b/src/content/javascript/es/javascript-basic.mdx
@@ -6,7 +6,7 @@ image: {
   alt: 'XXX'
 }
 date: '10/10/2022'
-tags: ['javascript']
+tags: ['javascript', 'solana']
 ---
 
 ESPAÑOL Javascript basic...
