--- a/src/content/blockchain/en/solana-basic.mdx
+++ b/src/content/blockchain/en/solana-basic.mdx
@@ -1,17 +1,17 @@
 ---
-title: 'ES Solana basic'
+title: 'EN Solana basic'
 desc: 'Solana is ...'
 image: {
   url: 'https://images.unsplash.com/photo-1609557927087-f9cf8e88de18?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80',
   alt: 'XXX'
 }
 date: '10/23/2023'
-tags: ['blockchain', 'solana']
+tags: ['solana']
 ---
 
 # SOLANA !!!!!!!!!
 
-ESPAÑOL Solana basic...
+ENGLISH Solana basic...
 
 ```javascript
 const asd = 'hola!';
