--- a/src/content/decentralization/en/what-is-ipfs.mdx
+++ b/src/content/decentralization/en/what-is-ipfs.mdx
@@ -1,19 +1,12 @@
 ---
-title: 'EN Solana basic'
-desc: 'Solana is ...'
+title: 'What is IPFS'
+desc: 'IPFS is ...'
 image: {
   url: 'https://images.unsplash.com/photo-1609557927087-f9cf8e88de18?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80',
   alt: 'XXX'
 }
 date: '10/23/2023'
-tags: ['blockchain', 'solana']
+tags: ['ipfs']
 ---
 
-# SOLANA !!!!!!!!!
-
-ENGLISH Solana basic...
-
-```javascript
-const asd = 'hola!';
-console.log(asd);
-```
+ENGLISH What is IPFS...
