--- a/src/content/decentralization/es/what-is-ipfs.mdx
+++ b/src/content/decentralization/es/what-is-ipfs.mdx
@@ -6,7 +6,7 @@ image: {
   alt: 'XXX'
 }
 date: '10/23/2023'
-tags: ['ipfs', 'decentralization']
+tags: ['ipfs']
 ---
 
-ENGLISH What is IPFS...
+ESPAÑOL What is IPFS...
