--- a/src/content/blockchain/en/how-solana-work.mdx
+++ b/src/content/blockchain/en/how-solana-work.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'EN How Solana work'
-desc: 'Solana works like ...'
+description: 'Solana works like ...'
 image: {
   url: 'https://images.unsplash.com/photo-1609557927087-f9cf8e88de18?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80',
   alt: 'XXX'
 }
-date: '06/06/2023'
+pubDate: '06/06/2023'
 tags: ['solana']
 ---
 
