--- a/src/content/blockchain/es/solana-basic.mdx
+++ b/src/content/blockchain/es/solana-basic.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'ES Solana basic'
-desc: 'Solana is ...'
+description: 'Solana is ...'
 image: {
   url: 'https://images.unsplash.com/photo-1609557927087-f9cf8e88de18?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80',
   alt: 'XXX'
 }
-date: '10/23/2023'
+pubDate: '10/23/2023'
 tags: ['solana']
 ---
 
