--- a/src/content/javascript/en/javascript-basic.mdx
+++ b/src/content/javascript/en/javascript-basic.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Javascript basic'
-desc: 'Javascript is ...'
+description: 'Javascript is ...'
 image: {
   url: 'https://images.unsplash.com/photo-1609557927087-f9cf8e88de18?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80',
   alt: 'XXX'
 }
-date: '10/10/2022'
+pubDate: '10/10/2022'
 tags: ['angular', 'solana']
 ---
 
