--- a/src/content/blockchain/es/how-solana-work.mdx
+++ b/src/content/blockchain/es/how-solana-work.mdx
@@ -9,6 +9,43 @@ pubDate: '06/06/2023'
 tags: ['solana']
 ---
 
-# Solana
+# Solana SPANISH
 
-ESPAÑOL How Solana work...
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet nulla elementum, porta lectus at, posuere ante. Aliquam dignissim augue massa, quis vehicula felis vulputate hendrerit. Morbi eget sapien ultricies, maximus sapien quis, bibendum purus. Duis porta risus non fermentum egestas. Vivamus suscipit, lectus nec suscipit luctus, odio metus iaculis lorem, et consequat nunc lacus a augue. Nulla vestibulum sodales risus lacinia cursus. Aliquam non dolor sed est mattis pretium.
+
+Nam nulla nibh, scelerisque a metus eu, lacinia rhoncus mi. Nunc vel erat varius orci scelerisque venenatis vel at neque. Phasellus mattis dictum semper. Ut eu interdum urna. Suspendisse scelerisque, mauris eu dapibus blandit, odio tellus vestibulum sem, eget commodo augue urna vel turpis. Nunc mi erat, fermentum id dolor in, lacinia placerat nunc. Vivamus quis felis lorem. Suspendisse tincidunt ligula sed aliquam consectetur. Sed sit amet odio magna. Nulla non ligula quis magna feugiat consequat sit amet non ligula. Curabitur a elit nisi. Donec eget consequat neque. Mauris malesuada enim enim, vulputate dignissim enim elementum eu. Duis tellus dolor, commodo eget dui nec, fringilla hendrerit turpis. Nam vulputate tincidunt volutpat. Mauris id diam non quam finibus auctor dapibus quis ante.
+
+## XXXX
+
+Donec [suscipit vestibulum](https://google.com) enim ac ornare. Integer id pellentesque arcu. Curabitur non posuere libero. Maecenas fringilla velit eget tempus bibendum. Donec lacinia mi non mi rutrum, fermentum venenatis quam sollicitudin. Maecenas tempor fermentum mi, et viverra mi dignissim a. Maecenas rhoncus diam quis purus fringilla laoreet. Nulla a diam sit amet lacus sagittis cursus ut nec velit. Nunc commodo, quam at posuere efficitur, massa metus ornare urna, et sagittis eros augue a arcu. Proin sit amet ex accumsan, efficitur lectus id, tincidunt tellus. Donec laoreet hendrerit enim, eget gravida est molestie eget.
+
+Integer sed volutpat mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse finibus tincidunt aliquam. Nunc vel ante at libero porttitor accumsan. In hac habitasse platea dictumst. Sed at lacus et nisl vulputate blandit eget id nibh. Fusce sit amet purus et nisl consectetur vestibulum non id ex. Vivamus a gravida justo. Mauris vitae leo nisi. In consectetur massa eget maximus facilisis. Sed mi risus, mollis quis faucibus quis, lacinia vitae nunc. Donec ultricies commodo commodo.
+
+```javascript
+export async function getStaticPaths() {
+
+  const pages: any[] = [];
+
+  // Build pages of each content
+  for await (let c of collectionMetadata) {
+    const coll = await getCollection(c.name as any);
+    coll.map((post) => {
+      pages.push({
+        params: {
+          lang: post.slug.split('/')[0],
+          category: c.name,
+          slug: post.slug.slice(3),
+        },
+        props: {
+          category: c.name,
+          post: post,
+        },
+      });
+    });
+  }
+
+  return pages;
+}
+```
+
+Ut et neque sed neque tempus hendrerit sit amet vitae massa. Quisque egestas tincidunt efficitur. Mauris vel dapibus felis, vitae aliquet ipsum. Nulla eu iaculis justo, quis pharetra dui. Phasellus libero mi, feugiat vitae ligula sed, tempor semper nunc. Fusce efficitur erat ut elit feugiat condimentum. Curabitur a aliquet erat. Maecenas et semper sem, tincidunt blandit augue. Nam sed magna quis lacus volutpat rutrum. Curabitur sagittis quam quis leo euismod tempus. Phasellus non dui tristique ipsum viverra pharetra. Ut eget imperdiet massa
