--- a/src/content/blockchain/en/how-solana-work.mdx
+++ b/src/content/blockchain/en/how-solana-work.mdx
@@ -9,6 +9,8 @@ pubDate: '06/06/2023'
 tags: ['solana', 'phantom', 'ipfs']
 ---
 
+import '@styles/article.css';
+
 # Solana ENGLISH
 
 Lorem ipsum dolor sit amet, [suscipit vestibulum](https://google.com) adipiscing elit. Proin sit amet nulla elementum, porta lectus at, **posuere ante**. Aliquam dignissim augue massa, quis vehicula felis vulputate hendrerit. Morbi eget sapien ultricies, maximus sapien quis, bibendum purus. Duis porta risus non fermentum egestas. Vivamus suscipit, lectus nec suscipit luctus, odio metus iaculis lorem, et consequat nunc lacus a augue. Nulla vestibulum sodales risus lacinia cursus. Aliquam non dolor sed est mattis pretium.
