--- a/src/content/blockchain/en/how-solana-work.mdx
+++ b/src/content/blockchain/en/how-solana-work.mdx
@@ -9,7 +9,7 @@ pubDate: '06/06/2023'
 tags: ['solana', 'phantom', 'ipfs']
 ---
 
-import '@styles/article.css';
+import '@styles/article.scss';
 
 # Solana ENGLISH
 
