--- a/src/content/blockchain/en/how-solana-work.mdx
+++ b/src/content/blockchain/en/how-solana-work.mdx
@@ -2,14 +2,12 @@
 title: 'EN How Solana work'
 description: 'Solana works like ...'
 image: {
-  url: 'https://images.unsplash.com/photo-1609557927087-f9cf8e88de18?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80',
+  url: 'https://github.blog/wp-content/uploads/2023/05/1200.630-Productivity-wLogo@2x.png?resize=1600%2C850',
   alt: 'XXX'
 }
 pubDate: '06/06/2023'
 tags: ['solana', 'phantom', 'ipfs']
 ---
-
-import '@styles/article.scss';
 
 # Solana ENGLISH
 
@@ -19,7 +17,7 @@ Lorem ipsum dolor sit amet, [suscipit vestibulum](https://google.com) adipiscing
 
 Nam nulla nibh, *scelerisque a metus eu*, lacinia rhoncus mi. **Nunc vel erat varius orci scelerisque venenatis vel at neque**. Phasellus mattis dictum semper. Ut eu interdum urna. Suspendisse scelerisque, mauris eu dapibus blandit, odio tellus vestibulum sem, eget commodo augue urna vel turpis. Nunc mi erat, fermentum id dolor in, lacinia placerat nunc. Vivamus quis felis lorem. Suspendisse tincidunt ligula sed aliquam consectetur. Sed sit amet odio magna. Nulla non ligula quis magna feugiat consequat sit amet non ligula. Curabitur a elit nisi. Donec eget consequat neque. Mauris malesuada enim enim, vulputate dignissim enim elementum eu. Duis tellus dolor, commodo eget dui nec, fringilla hendrerit turpis. Nam vulputate tincidunt volutpat. Mauris id diam non quam finibus auctor dapibus quis ante.
 
-## XXXX
+## Este es un título h2
 
 Donec [suscipit vestibulum](https://google.com) enim ac ornare. Integer id pellentesque arcu. Curabitur non posuere libero. Maecenas fringilla velit eget tempus bibendum. Donec lacinia mi non mi rutrum, fermentum venenatis quam sollicitudin. Maecenas tempor fermentum mi, et viverra mi dignissim a. Maecenas rhoncus diam quis purus fringilla laoreet. Nulla a diam sit amet lacus sagittis cursus ut nec velit. Nunc commodo, quam at posuere efficitur, massa metus ornare urna, et sagittis eros augue a arcu. Proin sit amet ex accumsan, efficitur lectus id, tincidunt tellus. Donec laoreet hendrerit enim, eget gravida est molestie eget.
 
@@ -31,7 +29,7 @@ Donec [suscipit vestibulum](https://google.com) enim ac ornare. Integer id pelle
 
 Integer sed volutpat mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse finibus tincidunt aliquam. Nunc vel ante at libero porttitor accumsan. In hac habitasse platea dictumst. Sed at lacus et nisl vulputate blandit eget id nibh. Fusce sit amet purus et nisl consectetur vestibulum non id ex. Vivamus a gravida justo. Mauris vitae leo nisi. In consectetur massa eget maximus facilisis. Sed mi risus, mollis quis faucibus quis, lacinia vitae nunc. Donec ultricies commodo commodo.
 
-```javascript
+```ts
 export async function getStaticPaths() {
 
   const pages: any[] = [];
@@ -58,7 +56,7 @@ export async function getStaticPaths() {
 }
 ```
 
-### Title h3
+### Este es un título h3
 
 Ut et `neque sed neque tempus hendrerit sit amet vitae massa`. Quisque egestas tincidunt efficitur. Mauris vel dapibus felis, vitae aliquet ipsum. Nulla eu iaculis justo, quis pharetra dui. Phasellus libero mi, feugiat vitae ligula sed, tempor semper nunc. Fusce efficitur erat ut elit feugiat condimentum. Curabitur a aliquet erat. Maecenas et semper sem, tincidunt blandit augue. Nam sed magna quis lacus volutpat rutrum. Curabitur sagittis quam quis leo euismod tempus. Phasellus non dui tristique ipsum viverra pharetra. Ut eget imperdiet massa
 
@@ -66,8 +64,12 @@ Ut et `neque sed neque tempus hendrerit sit amet vitae massa`. Quisque egestas t
 * Bullet 2
 * Bullet 3
 
-### Title h4
+---
+
+#### Este es un título h4
 
 Ut et neque sed neque tempus hendrerit sit amet vitae massa. Quisque egestas tincidunt efficitur. Mauris vel dapibus felis, vitae aliquet ipsum. Nulla eu iaculis justo, quis pharetra dui. Phasellus libero mi, feugiat vitae ligula sed, tempor semper nunc. Fusce efficitur erat ut elit feugiat condimentum. Curabitur a aliquet erat. Maecenas et semper sem, tincidunt blandit augue. Nam sed magna quis lacus volutpat rutrum. Curabitur sagittis quam quis leo euismod tempus. Phasellus non dui tristique ipsum viverra pharetra. Ut eget imperdiet massa
 
+##### Este es un título h5
 
+###### Este es un título h6
