--- a/src/content/blockchain/en/how-solana-work.mdx
+++ b/src/content/blockchain/en/how-solana-work.mdx
@@ -11,7 +11,7 @@ tags: ['solana', 'phantom', 'ipfs']
 
 # Solana ENGLISH
 
-Lorem ipsum dolor sit amet, [suscipit vestibulum](https://google.com) adipiscing elit. Proin sit amet nulla elementum, porta lectus at, **posuere ante**. Aliquam dignissim augue massa, quis vehicula felis vulputate hendrerit. Morbi eget sapien ultricies, maximus sapien quis, bibendum purus. Duis porta risus non fermentum egestas. Vivamus suscipit, lectus nec suscipit luctus, odio metus iaculis lorem, et consequat nunc lacus a augue. Nulla vestibulum sodales risus lacinia cursus. Aliquam non dolor sed est mattis pretium.
+Lorem ipsum dolor sit amet, [suscipit vestibulum](https://google.com) adipiscing elit. Proin sit amet nulla elementum, la variable `name` porta lectus at, **posuere ante**. Aliquam dignissim augue massa, quis vehicula felis vulputate hendrerit. Morbi eget sapien ultricies, maximus sapien quis, bibendum purus. Duis porta risus non fermentum egestas. Vivamus suscipit, lectus nec suscipit luctus, odio metus iaculis lorem, et consequat nunc lacus a augue. Nulla vestibulum sodales risus lacinia cursus. Aliquam non dolor sed est mattis pretium.
 
 ![Alt](https://github.blog/wp-content/uploads/2023/05/1200.630-Productivity-wLogo@2x.png?resize=1600%2C850)
 
@@ -60,7 +60,7 @@ export async function getStaticPaths() {
 
 Ut et `neque sed neque tempus hendrerit sit amet vitae massa`. Quisque egestas tincidunt efficitur. Mauris vel dapibus felis, vitae aliquet ipsum. Nulla eu iaculis justo, quis pharetra dui. Phasellus libero mi, feugiat vitae ligula sed, tempor semper nunc. Fusce efficitur erat ut elit feugiat condimentum. Curabitur a aliquet erat. Maecenas et semper sem, tincidunt blandit augue. Nam sed magna quis lacus volutpat rutrum. Curabitur sagittis quam quis leo euismod tempus. Phasellus non dui tristique ipsum viverra pharetra. Ut eget imperdiet massa
 
-* Bullet 1
+* **Bullet 1:** neque tempus hendrerit
 * Bullet 2
 * Bullet 3
 
