Content related logic

--- a/src/content/blockchain/en/how-solana-work.mdx
+++ b/src/content/blockchain/en/how-solana-work.mdx
@@ -7,6 +7,9 @@ image: {
 }
 pubDate: '06/06/2023'
 tags: ['solana', 'phantom', 'ipfs']
+relatedPosts:
+- { collection: 'blockchain', slug: 'en/solana-basic' }
+- { collection: 'javascript', slug: 'en/javascript-basic' }
 ---
 
 # Solana ENGLISH
