--- a/src/content/blockchain/en/solana-basic.mdx
+++ b/src/content/blockchain/en/solana-basic.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'EN Solana basic'
-description: 'Solana is ...'
+description: 'This is a short description of this content. A brief of the main topic related with the whole article.'
 image: {
   url: 'https://images.unsplash.com/photo-1609557927087-f9cf8e88de18?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80',
   alt: 'XXX'
