--- a/src/content/blockchain/en/how-solana-work.mdx
+++ b/src/content/blockchain/en/how-solana-work.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'EN How Solana work'
+title: 'EN How Solana work in his blockchain'
 description: 'Solana works like ...'
 image: {
   url: 'https://github.blog/wp-content/uploads/2023/05/1200.630-Productivity-wLogo@2x.png?resize=1600%2C850',
