--- a/src/content/blockchain/en/how-solana-work.mdx
+++ b/src/content/blockchain/en/how-solana-work.mdx
@@ -75,4 +75,15 @@ Ut et neque sed neque tempus hendrerit sit amet vitae massa. Quisque egestas tin
 
 ##### Este es un título h5
 
+|  | Web2 (apps) | Web3 (dapps) |
+| --- | --- | --- |
+| Front-end | Angular, React, Vue, etc. | Angular, React, Vue, etc. |
+| Backend | API Rest (Python, NodeJS, PHP, etc.) | Smart Contracts (Rust, Solidity, C/C++, otro) |
+| Protocolos | HTTP, HTTPS | JSON RPC |
+| Clientes | Fetch, Axios, etc. | @solana/web3.js, Ether.js, otro |
+| Cloud | AWS, Vercel, etc. | Solana, Ethereum, otra |
+| BBDD | MySQL, MongoDB, etc. | Blockchain, IPFS, Arweave, otro |
+| Auth | User/Pass, OAuth, etc. | Wallets (Phantom, Metamask, etc.) |
+| Repositorios | Público/Privado | Suelen ser públicos en GitHub |
+
 ###### Este es un título h6
