--- a/src/content/decentralization/en/web2-vs-web3.mdx
+++ b/src/content/decentralization/en/web2-vs-web3.mdx
@@ -84,17 +84,17 @@ technologies. It is not an easy decision, **it is a path that requires a high le
 Despite blockchain world has a little more than one decade, yet we are in an early time to adopt and learn these technologies. As if it were the internet
 at the end of the '90s.
 
-Lots of people every day start to enter to the blockchain world, in general, with economic interests due to crypto worth. As developers, we have the
+Lots of people every day start to enter to the blockchain world, in general, with economic interests due to the value of the crypto. As developers, we have the
 possibility not only to be crypto users, but also be creators of these decentralize services of tomorrow.
 
 ## Conclusion
-Now you have an overview of the differences between Web2 and Web3 as well as a comprehension deeper of the decentralization and why a Web3 developer do.
+Now you have an overview of the differences between Web2 and Web3 as well as a comprehension deeper of decentralization and what a Web3 developer does.
 
 Being a developer of this type is an exiting and gratifying challenge. You will join a small group of professionals trained in the use of these revolutionary
 technologies. Only a small percentage of programmers in the world, about 1 o 2%, have the technical knowledge related to blockchain, and they are able to
 build NFT portals, wallets, or decentralize systems.
 
-After exploring the key concepts and understanding what are you becoming, the question you to answer is: Do I ready to take my career into Web3 industry?
+After exploring the key concepts and understanding what are you becoming, the question you have to answer is: Am I ready to take my career into Web3 industry?
 
 Web3 world offers unprecedented opportunities to innovate and build apps that challenge the limits of traditional web. As a web3 developer, you will be
 able to build decentralized solutions, opening new paths in the technological horizon.
