Change content structure

--- a/src/content/blockchain/solana-ecosystem.mdx
+++ b/src/content/blockchain/solana-ecosystem.mdx
@@ -2,6 +2,10 @@
 title: 'Ecosistema Solana'
 description: 'Explorando Solana, primeros pasos para convertirte en un desarrollador bajo esta cadena de bloques.'
 pubDate: '08/15/2023'
+englishMetadata: {
+  title: 'Solana Ecosystem',
+  description: 'Exploring Solana, first steps to become a developer under this blockchain.'
+}
 ---
 
 # Ecosistema Solana
