--- a/src/content/blockchain/web2-vs-web3.mdx
+++ b/src/content/blockchain/web2-vs-web3.mdx
@@ -2,6 +2,10 @@
 title: 'Web2 vs. Web3'
 description: 'Una mirada sobre el gran cambio que las tecnologías Web3 trajeron al desarrollo de software en comparación con el tradicional paradigma Web2.'
 pubDate: '08/01/2023'
+englishMetadata: {
+  title: 'Web2 vs. Web3',
+  description: 'A look at the great change that Web3 technologies brought to software development compared to the traditional Web2 paradigm.'
+}
 ---
 
 # Web2 vs. Web3
