--- a/src/content/blockchain/solidity-cross-reentrancy-attack.mdx
+++ b/src/content/blockchain/solidity-cross-reentrancy-attack.mdx
@@ -8,7 +8,7 @@ englishMetadata: {
 }
 ---
 
-# Solidity: Ataque reentrancy cruzado
+# Solidity: Ataque Reentrancy Cruzado
 
 La vulnerabilidad de los contratos inteligentes conocida como **Reetrancy** no solo permite llamar a una misma función una y otra vez. Existe una variante similar, pero que **provoca el llamado a una segunda función**. Se lo conoce con el nombre de **Reetrancy Cruzado**.
 
