--- a/src/content/blockchain/solidity-dos-attack.mdx
+++ b/src/content/blockchain/solidity-dos-attack.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Solidity: Ataque DoS por reversión'
+title: 'Solidity: Ataque DoS Por Reversión'
 description: 'Los contratos inteligentes pueden ser víctimas de ataques de denegación de servicios y bloqueados de tal manera que se pierdan millones de dólares y no puedan recuperarse jamás.'
 pubDate: '06/01/2023'
 englishMetadata: {
@@ -8,7 +8,7 @@ englishMetadata: {
 }
 ---
 
-# Solidity: Ataque DoS por reversión
+# Solidity: Ataque DoS Por Reversión
 
 Es conocido en el mundo de la informática los Ataque de Denegación de Servicios o **DoS**. Los mismos **interrumpen de forma total o parcial un servicio** como un servidor web, un servidor de base de datos o algún tipo de red donde se intercambia información.
 
