--- a/src/content/blockchain/solidity-reentrancy-attack.mdx
+++ b/src/content/blockchain/solidity-reentrancy-attack.mdx
@@ -8,7 +8,7 @@ englishMetadata: {
 }
 ---
 
-# Solidity: ataque reentrancy
+# Solidity: Ataque Reentrancy
 
 **El depósito y retiro de ETH en un contrato** por parte de un usuario **puede exponer vulnerabilidades** si los mismos no se realizan de la forma correcta.
 
