--- a/src/content/blockchain/solidity-self-destruct-attack.mdx
+++ b/src/content/blockchain/solidity-self-destruct-attack.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Solidity: Ataque de Autodestrucción'
+title: 'Solidity: Ataque Por Autodestrucción'
 description: 'Las transferencias y el envío de ETH pueden ser perjudiciales para un contrato. Muchos ataques no solo buscan robar fondos, también pueden buscar causar daño y que se pierdan millones de dólares.'
 pubDate: '06/01/2023'
 englishMetadata: {
@@ -8,7 +8,7 @@ englishMetadata: {
 }
 ---
 
-# Solidity: Ataque de autodestrucción
+# Solidity: Ataque Por Autodestrucción
 
 Las transferencias y **el envío de ETH también pueden ser perjudiciales para un contrato**. Muchos ataques a contratos inteligentes no solo buscan robar fondos, también pueden buscar causar daño y que se pierdan millones en un proyecto.
 
