Add image to BlogCard

--- a/src/content/blockchain/solana-ecosystem.mdx
+++ b/src/content/blockchain/solana-ecosystem.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Ecosistema Solana'
 description: 'Explorando Solana, primeros pasos para convertirte en un desarrollador bajo esta cadena de bloques.'
+image: '/tech/solana.webp'
 pubDate: '08/15/2023'
 englishMetadata: {
   title: 'Solana Ecosystem',
