--- a/src/content/blockchain/solidity-self-destruct-attack.mdx
+++ b/src/content/blockchain/solidity-self-destruct-attack.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Solidity: Ataque Por Autodestrucción'
 description: 'Las transferencias y el envío de ETH pueden ser perjudiciales para un contrato. Muchos ataques no solo buscan robar fondos, también pueden buscar causar daño y que se pierdan millones de dólares.'
+image: '/tech/solidity.webp'
 pubDate: '06/01/2023'
 englishMetadata: {
   title: 'Solidity: Self-Destruct Attack',
