--- a/src/content/blockchain/solidity-dos-attack.mdx
+++ b/src/content/blockchain/solidity-dos-attack.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Solidity: Ataque DoS Por Reversión'
 description: 'Los contratos inteligentes pueden ser víctimas de ataques de denegación de servicios y bloqueados de tal manera que se pierdan millones de dólares y no puedan recuperarse jamás.'
+image: '/tech/solidity.webp'
 pubDate: '06/01/2023'
 englishMetadata: {
   title: 'Solidity: Revert DoS Attack',
