--- a/src/content/blockchain/solana-ecosystem.mdx
+++ b/src/content/blockchain/solana-ecosystem.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Ecosistema Solana'
-description: 'Explorando Solana, primeros pasos para convertirte en un desarrollador bajo esta cadena de bloques.'
+description: 'Explorando Solana: herramientas y recursos complementarios que debes conocer como desarrollador para desplegar contratos inteligentes sobre esta blockchain.'
 image: '/tech/solana.webp'
-pubDate: '08/15/2023'
+pubDate: '08/29/2023'
 englishMetadata: {
   title: 'Solana Ecosystem',
-  description: 'Exploring Solana, first steps to become a developer under this blockchain.'
+  description: 'Exploring Solana: complementary tools and resources that you should know as a developer to deploy smart contracts on this blockchain.'
 }
 ---
 
@@ -89,3 +89,6 @@ del proyecto que estamos programando, mayormente haremos uso de librerías ya es
 
 En esta artículo hemos visto conceptos independientes sobre Solana que son importante conocer para adentrarnos en su ecosistema. Poco a poco, los conceptos
 se irán uniendo y relacionando para lograr comprender y tener éxito desarrollando proyectos en esta blockchain.
+
+---
+Post creado en colaboración con el **Curso de Solana** de **Platzi**.
