--- a/src/content/blockchain/solana-wrap-up.mdx
+++ b/src/content/blockchain/solana-wrap-up.mdx
@@ -5,7 +5,7 @@ image: '/tech/solana.webp'
 pubDate: '08/20/2023'
 englishMetadata: {
   title: 'Solana: Summary of Operation Architecture',
-  description: 'Summary of the operation of Solana's components that make it so special compared to other Blockchains such as Ethereum or Bitcoin.'
+  description: 'Summary of the operation of Solana components that make it so special compared to other Blockchains such as Ethereum or Bitcoin.'
 }
 ---
 
