--- a/src/content/blockchain/solana-architecture.mdx
+++ b/src/content/blockchain/solana-architecture.mdx
@@ -26,14 +26,14 @@ Al finalizar la lectura de todos los artículos, comprenderás el porqué de la 
 **Indice de artículos**
 
 - La Arquitectura Detrás De Solana
-- [Solana vs. Ethereum](/es/solana-vs-ethereum)
-- [Ecosistema Solana](/es/solana-ecosystem)
-- [Proof of History (PoH)](/es/solana-proof-of-history)
-- [Tower BFT](/es/solana-tower-bft)
-- [Turbine](/es/solana-turbine)
-- [Gulf Stream](/es/solana-gulf-stream)
-- [Sealevel](/es/solana-sealevel)
-- [Pipelining](/es/solana-pipelining)
-- [Cloudbreack](/es/solana-cloudbreak)
-- [Accounts & Archivers](/es/solana-accounts-archivers)
-- [Resumen Funcionamiento Arquitectura](/es/solana-wrap-up)
+- [Solana vs. Ethereum](/es/blog/blockchain/solana-vs-ethereum)
+- [Ecosistema Solana](/es/blog/blockchain/solana-ecosystem)
+- [Proof of History (PoH)](/es/blog/blockchain/solana-proof-of-history)
+- [Tower BFT](/es/blog/blockchain/solana-tower-bft)
+- [Turbine](/es/blog/blockchain/solana-turbine)
+- [Gulf Stream](/es/blog/blockchain/solana-gulf-stream)
+- [Sealevel](/es/blog/blockchain/solana-sealevel)
+- [Pipelining](/es/blog/blockchain/solana-pipelining)
+- [Cloudbreack](/es/blog/blockchain/solana-cloudbreak)
+- [Accounts & Archivers](/es/blog/blockchain/solana-accounts-archivers)
+- [Resumen Funcionamiento Arquitectura](/es/blog/blockchain/solana-wrap-up)
