--- a/src/content/blockchain/solana-proof-of-history.mdx
+++ b/src/content/blockchain/solana-proof-of-history.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Solana: Proof Of History (PoH)',
   description: 'Proof of History is Solana first major piece. It is a complement to the Proof of Stake consensus protocol that allows nodes to synchronize without the need for them to communicate with each other.'
 }
+prev: 'solana-ecosystem'
+next: 'solana-tower-bft'
 ---
 
 # Solana: Proof Of History (PoH)
